--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@telegram-auth/react": "^1.0.3",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "i": "^0.3.7",
     "npm": "^10.8.3",
     "react": "^18.3.1",
@@ -20,7 +21,8 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
