--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-telegram-auth": "^1.0.4",
     "redux-persist": "^6.0.0",
+    "telegram": "^2.24.11",
     "yup": "^1.4.0"
   },
   "devDependencies": {
