added telegram login mobile

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "i": "^0.3.7",
+    "normalize": "^0.3.1",
     "npm": "^10.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
